# app/controllers/enterprise.py
@@ -6,84 +6,84 @@ class EnterpriseController:
     def __init__(self):
         self.enterprise_usecase = EnterpriseUseCase()
 
-    def create_login(self):
+    def create_enterprise(self):
         data = request.get_json()
-        login_dto = EnterpriseDTO(**data)
-        login = self.enterprise_usecase.create_login(login_dto)
-        return jsonify({'id': login.id,
-                         'name': login.name,
-                         'email': login.email,
-                         'phoneNumber': login.phoneNumber,
-                         'id_login': login.id_login,
-                         'address': login.address,
-                         'city': login.city,
-                         'state': login.state,
-                         'cep': login.cep,
-                         'number': login.number,
-                         'complement': login.complement,
-                         'cnpj': login.cnpj,
-                         'status': login.status,
+        enterprise_dto = EnterpriseDTO(**data)
+        enterprise = self.enterprise_usecase.create_enterprise(enterprise_dto)
+        return jsonify({'id': enterprise.id,
+                         'name': enterprise.name,
+                         'email': enterprise.email,
+                         'phoneNumber': enterprise.phoneNumber,
+                         'id_login': enterprise.id_login,
+                         'address': enterprise.address,
+                         'city': enterprise.city,
+                         'state': enterprise.state,
+                         'cep': enterprise.cep,
+                         'number': enterprise.number,
+                         'complement': enterprise.complement,
+                         'cnpj': enterprise.cnpj,
+                         'status': enterprise.status,
                          })
 
-    def get_login_by_id(self, login_id):
-        login = self.enterprise_usecase.get_login_by_id(login_id)
-        if login:
-            return jsonify({'id': login.id,
-                         'name': login.name,
-                         'email': login.email,
-                         'phoneNumber': login.phoneNumber,
-                         'id_login': login.id_login,
-                         'address': login.address,
-                         'city': login.city,
-                         'state': login.state,
-                         'cep': login.cep,
-                         'number': login.number,
-                         'complement': login.complement,
-                         'cnpj': login.cnpj,
-                         'status': login.status,
+    def get_enterprise_by_id(self, enterprise_id):
+        enterprise = self.enterprise_usecase.get_enterprise_by_id(enterprise_id)
+        if enterprise:
+            return jsonify({'id': enterprise.id,
+                         'name': enterprise.name,
+                         'email': enterprise.email,
+                         'phoneNumber': enterprise.phoneNumber,
+                         'id_login': enterprise.id_login,
+                         'address': enterprise.address,
+                         'city': enterprise.city,
+                         'state': enterprise.state,
+                         'cep': enterprise.cep,
+                         'number': enterprise.number,
+                         'complement': enterprise.complement,
+                         'cnpj': enterprise.cnpj,
+                         'status': enterprise.status,
                          })
 
-        return jsonify({'message': 'Login not found'}), 404
+        return jsonify({'message': 'Enterprise not found'}), 404
 
-    def get_all_logins(self):
-        logins = self.enterprise_usecase.get_all_logins()
-        return jsonify([{'id': login.id,
-                         'name': login.name,
-                         'email': login.email,
-                         'phoneNumber': login.phoneNumber,
-                         'id_login': login.id_login,
-                         'address': login.address,
-                         'city': login.city,
-                         'state': login.state,
-                         'cep': login.cep,
-                         'number': login.number,
-                         'complement': login.complement,
-                         'cnpj': login.cnpj,
-                         'status': login.status,} for login in logins])
+    def get_all_enterprises(self):
+        enterprises = self.enterprise_usecase.get_all_enterprises()
+        return jsonify([{'id': enterprise.id,
+                         'name': enterprise.name,
+                         'email': enterprise.email,
+                         'phoneNumber': enterprise.phoneNumber,
+                         'id_login': enterprise.id_login,
+                         'address': enterprise.address,
+                         'city': enterprise.city,
+                         'state': enterprise.state,
+                         'cep': enterprise.cep,
+                         'number': enterprise.number,
+                         'complement': enterprise.complement,
+                         'cnpj': enterprise.cnpj,
+                         'status': enterprise.status,} for enterprise in enterprises])
     
-    def update_login(self, user_id):
+    def update_enterprise(self, enterprise_id):
         data = request.get_json()
-        login_dto = EnterpriseDTO(**data)
-        login = self.enterprise_usecase.update_login(user_id, login_dto)
-        if login:
-            return jsonify({'id': login.id,
-                         'name': login.name,
-                         'email': login.email,
-                         'phoneNumber': login.phoneNumber,
-                         'id_login': login.id_login,
-                         'address': login.address,
-                         'city': login.city,
-                         'state': login.state,
-                         'cep': login.cep,
-                         'number': login.number,
-                         'complement': login.complement,
-                         'cnpj': login.cnpj,
-                         'status': login.status,
+        enterprise_dto = EnterpriseDTO(**data)
+        enterprise = self.enterprise_usecase.update_enterprise(enterprise_id, enterprise_dto)
+        if enterprise:
+            return jsonify({'id': enterprise.id,
+                         'name': enterprise.name,
+                         'email': enterprise.email,
+                         'phoneNumber': enterprise.phoneNumber,
+                         'id_login': enterprise.id_login,
+                         'address': enterprise.address,
+                         'city': enterprise.city,
+                         'state': enterprise.state,
+                         'cep': enterprise.cep,
+                         'number': enterprise.number,
+                         'complement': enterprise.complement,
+                         'cnpj': enterprise.cnpj,
+                         'status': enterprise.status,
                          })
-        return jsonify({'message': 'Login not found'}), 404
+        return jsonify({'message': 'Enterprise not found'}), 404
     
-    def delete_login(self, login_id):
-        login = self.enterprise_usecase.delete_user(login_id)
-        if login:
-            return jsonify({'message': 'Login deleted'})
-        return jsonify({'message': 'Login not found'}), 404
+    def delete_enterprise(self, enterprise_id):
+        enterprise = self.enterprise_usecase.delete_enterprise(enterprise_id)
+        if enterprise:
+            return jsonify({'message': 'Enterprise deleted'})
+        return jsonify({'message': 'Enterprise not found'}), 404
